data/derived/comb/progs/unify/prog6178.ml.out
Characters 73-84:
  let f a x = let (l1x,l2x) = x in (0,l1x+l2x)@a in
                                   ^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
